--- a/src/pages/sold/sold.scss
+++ b/src/pages/sold/sold.scss
@@ -1,3 +1,14 @@
-page-sold {
-
+@charset "UTF-8";
+.sold {
+    .btn-tab {
+        height: 50%;
+        text-align: center;
+        padding: 25%;
+        &:first-child {
+            border-bottom: 1px solid #ccc;
+        }
+        >ion-icon {
+            font-size: 60px;
+        }
+    }
 }
