添加顾客选择列表及挑选列表

--- a/src/pages/common/number-input-modal/number-input-modal.component.html
+++ b/src/pages/common/number-input-modal/number-input-modal.component.html
@@ -1,7 +1,7 @@
 <div class="number-input-container">
-  <div class="number-input-title">分值</div>
+  <div class="number-input-title">数值</div>
   <div class="number-input-content">
-    <input id="numberInput" type="number" [(ngModel)]="learnCertNumber" placeholder="请输入分值">
+    <input id="numberInput" type="number" [(ngModel)]="learnCertNumber" placeholder="请输入数值">
   </div>
   <button #focusInput></button>
   <div class="btn-group">
