--- a/src/pages/common/select-list/select-list.scss
+++ b/src/pages/common/select-list/select-list.scss
@@ -1,3 +1,28 @@
+ion-modal.item-list-modal ion-backdrop {
+    visibility: visible !important;
+    z-index: 0;
+  }
+  
+  ion-modal.item-list-modal .modal-wrapper {
+    top: 60%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
 .item-list {
-    border-top: 2px solid #e6e6e6; 
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    .item-header {
+        height: 45px;
+        line-height: 45px;
+        padding-left: 10px;
+    }
+  .item-list-content {
+    border-top: 2px solid #e6e6e6;
+    position: absolute;
+    width: 100%;
+  }
 }
+
