添加销售统计界面

--- a/src/pages/statistics/sold-statistics/sold-statistics.scss
+++ b/src/pages/statistics/sold-statistics/sold-statistics.scss
@@ -1,3 +1,32 @@
 page-sold-statistics {
-
+  .sold-statistics-time-box {
+    display: inline-flex;
+    position: relative;
+    width: 100%;
+    height: 56px;
+    background-color: #fff;
+    border: 1px solid #000;
+    .start-time-box {
+      border-right: 1px solid #e6e6e6;
+    }
+    .start-time-box,
+    .end-time-box {
+      width: 50%;
+      padding-left: 12%;
+      padding-top: 13px;
+      font-size: 18px;
+    }
+    ion-icon {
+      font-size: 30px;
+      color: #e6e6e6;
+      position: absolute;
+      padding-left: 3px;
+      padding-top: 1px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+    }
+  }
 }
+
