完善销售统计及添加excel导出service

--- a/src/pages/statistics/sold-statistics/sold-statistics.scss
+++ b/src/pages/statistics/sold-statistics/sold-statistics.scss
@@ -28,5 +28,11 @@ page-sold-statistics {
       background-color: #fff;
     }
   }
+
+  .sold-statistics-info {
+    padding: 15px;
+    font-size: 20px;
+
+  }
 }
 
