修改模型及样式

--- a/src/pages/sold/sold.scss
+++ b/src/pages/sold/sold.scss
@@ -3,7 +3,7 @@
     .btn-tab {
         height: 50%;
         text-align: center;
-        padding: 25%;
+        padding: 25% 0;
         &:first-child {
             border-bottom: 1px solid #ccc;
         }
