--- a/src/pages/customer/customer.scss
+++ b/src/pages/customer/customer.scss
@@ -4,7 +4,7 @@
     .btn-tab {
         height: 50%;
         text-align: center;
-        padding: 25%;
+        padding: 25% 0;
         &:first-child {
             border-bottom: 1px solid #ccc;
         }
