--- a/src/pages/more/more.scss
+++ b/src/pages/more/more.scss
@@ -1,10 +1,17 @@
-.more-list {
+.more {
+  .more-list {
     font-size: 20px;
     border-top: 1px solid #e6e6e6;
     border-bottom: 1px solid #e6e6e6;
     ion-icon {
-        display: inline-block;
-        margin-right: 10px;
-        font-size: 30px;
+      display: inline-block;
+      margin-right: 10px;
+      font-size: 30px;
     }
+  }
+
+  .logout-btn {
+      background-color: #f66;
+  }
 }
+
