--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,4 +1,17 @@
 page-search {
+  .scroll-content {
+    //这个是ion-content 自带的类，需要修改它
+    -webkit-user-select: auto !important;
+    -moz-user-select: auto !important;
+    -ms-user-select: auto !important;
+    user-select: auto !important;
+  }
+
+  .selectable {
+    -webkit-user-select: auto; //控制网页内容选择范围,恢复选择功能
+    overflow-x: scroll;
+  }
+
   .create-item {
     width: 100%;
     display: flex;
@@ -27,7 +40,10 @@ page-search {
     }
   }
 
-  p {
-    margin-top: 10px;
+  .tracking-number-list {
+    p {
+      margin-top: 10px;
+      border-bottom: 0.55px solid #c8c7cc;
+    }
   }
 }
